@@ -1,3 +1,10 @@
+2011-02-01  Glenn Randers-Pehrson  <glennrp@simple...>
+
+        * coders/bmp.c (ReadBMPImage): Changed file_size greater than
+        expected from a corrupt-image error to a warning.  File_size
+        too small is still an error, and made that so also for BI_RGB
+        images which were previously exempted from the test.
+
 2011-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* tests/rwblob.c, tests/rwfile.c: Validate the data in each image
